Changed LavaList from a LinkedList to and ArrayList.